--- a/views/css/style.css
+++ b/views/css/style.css
@@ -3052,3 +3052,159 @@ input:-ms-input-placeholder,textarea:-ms-input-placeholder{  /* Internet Explore
 .idxMenu li:after,.rcmList ul:before,.rcmList ul:after{
 	display: none;
 }
+/*洗车券*/
+.carCoup{
+	padding: 0 0.3rem;
+}
+.carCoup li{
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	width: 100%;
+	margin-bottom: 0.3rem;
+	border-radius: 0.1rem;
+	overflow: hidden;
+}
+.carCoup .bg{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	width: 100%;
+	height: 1.91rem;
+	background: url(../images/carCoup.png) no-repeat no-repeat;
+	background-size: cover;
+}
+.carCoup .bg .couRight{
+	width: 4.76rem;
+	height: 100%;
+	color: white;
+	padding: 0 0.26rem;
+}
+.carCoup .bg .couRight div{
+	margin-top: 0.4rem;
+	font-size: 0.28rem;
+}
+.carCoup .bg .couRight p{
+	font-size: 0.24rem;
+	color: white;
+}
+.carCoup .bg .couLeft{
+	width: 2.74rem;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	text-align: center;
+}
+.carCoup li .couLeft p{
+	margin: 0;
+	color: white;
+	font-size: 0.5rem;
+	line-height: 0.95rem;
+	border-right: 0.01rem solid white;
+}
+.carCoup .shopName{
+	padding: 0.2rem;
+	background: white;
+}
+.carCoup .shopName p{
+	margin: 0;
+	font-size: 0.28rem;
+	line-height: 0.5rem;
+	color: #2B2B2B;
+}
+/*进销存首页*/
+.tabBox{
+	padding: 0.5rem 0.3rem 0 0.3rem;
+}
+.tabBox li .tabText{
+	margin-left: 1rem;
+	font-size: 0.28rem;
+	color: #2b2b2b;
+}
+.tabBox li{
+	width: 100%;
+	line-height: 1.1rem;
+	padding: 0;
+}
+.tabBox li:after {
+	left: 0;
+	height: 1px !important;
+}
+.tabBox li img{
+	width: 0.75rem;
+	height: 0.75rem;
+	border-radius: 50%;
+	vertical-align: middle;
+	position: absolute;
+	top: 50%;
+	left: 0rem;
+	-webkit-transform: translateY(-50%);
+	transform: translateY(-50%);
+}
+/*进销存item*/
+#pullrefresh{
+	top:0.88rem;
+	background: #f3f3f3;
+}
+.inOutSaved li{
+	background: white;
+	margin-bottom: 0.2rem;
+}
+.inOutSaved li .inOutSaved_headText{
+	margin: 0;
+	padding: 0 0.25rem;
+	font-size: 0.24rem;
+	line-height: 0.8rem;
+	color: #2B2B2B;
+}
+.inOutSaved_item img{
+	width: 1.25rem;
+	height: 1.25rem;
+}
+.inOutSaved_item{
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+	border-bottom: 1px solid #d7d7d7;
+	padding: 0 0.45rem 0.25rem 0.45rem;
+}
+.inOutSaved_item_text{
+	width: 5rem;
+	margin-left: 0.33rem;
+}
+.inOutSaved_item_text p{
+	margin-bottom: 0;
+	color: #8E8E8E;
+	font-size: 0.22rem;
+	line-height: 0.4rem;
+}
+.inOutSaved_item_text .inOutSaved_item_text_head{
+	color: #333333;
+	font-size: 0.26rem;
+	margin-bottom: 0.15rem;
+}
+.inOutSaved_item_text_item_unitprice{
+	margin-left: 0.4rem;
+}
+.inOutSaved_item_text_item_totalprice{
+	float: right;
+}
+.inOutSaved_item_text_item_totalprice i,.inOutSaved_bottomText span i{
+	font-style: normal;
+	color: #CE1B1B;
+}
+.inOutSaved_bottomText button{
+	height: 0.62rem;
+	font-size: 0.24rem;
+	margin-top: 0.11rem;
+}
+.inOutSaved_bottomText{
+	margin: 0;
+	padding: 0 0.4rem;
+	font-size: 0.26rem;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	line-height: 0.86rem;
+}
