--- a/views/outBound.html
+++ b/views/outBound.html
@@ -19,68 +19,131 @@
 	}
 </style>
 <body>
-	<div id="vmObj" v-cloak>
-	<header class="mui-bar mui-bar-nav whiteHeader">
-	    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-	    <h1 class="mui-title">出库</h1>
+	<!--<div id="vmObj" v-cloak>-->
+	<header class="mui-bar header idxHeader">
+		<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
+		<h1 class="mui-title head-title">出库</h1>
 	</header>
-	<div class="mui-content">
-		<div class="outTop" @tap="selUnit">
-			<span>姓名</span>
-			<input type="text" placeholder="点击选择客户" readonly v-model="userName" />
-			<img src="images/jiantou.png" class="arrowDown"/>
-		</div>
-		<p class="outTit">选择商品</p>
-		<div class="inBan outAdd" @tap="selGood">
-			<img src="images/outAdd.png" alt="" v-if="!selGoods" />
-			<div style="width: 100%;" v-else>
-			<p>{{goodName}}</p>
-			<p class="p1"><span>X{{selGoods.stock}}</span><span>￥{{selGoods.cost_price}}</span><span>￥{{selGoods.sale_amount}}</span></p>
-			<img :src="selGoods.goods_img" alt="" />
+	<!--<header class="mui-bar mui-bar-nav whiteHeader">-->
+	    <!--<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>-->
+	    <!--<h1 class="mui-title">出库</h1>-->
+	<!--</header>-->
+	<!--新出库记录-->
+	<div class="mui-content" id="vmObj" v-cloak>
+		<div>
+			<div id="pullrefresh" class="mui-scroll-wrapper">
+				<div class="mui-scroll">
+					<ul class="inOutSaved">
+						<li v-for="(list,index) in dataLists">
+							<p class="inOutSaved_headText">订单号:{{list.order_sn}}<span style="float: right">时间:{{list.add_time}}</span></p>
+							<div class="inOutSaved_item">
+								<img :src="list.goods_img" v-if="list.goods_img">
+								<img src="images/logo.png" v-else>
+								<div class="inOutSaved_item_text">
+									<p class="inOutSaved_item_text_head">{{list.goods_name}}</p>
+									<p class="inOutSaved_item_text_item">型号/规格：{{list.spec_name1}}/{{list.spec_name2}}</p>
+									<p class="inOutSaved_item_text_item"><span class="inOutSaved_item_text_item_in">库存：{{list.stock}} </span><span class="inOutSaved_item_text_item_unitprice">单价：{{list.price}}</span><span class="inOutSaved_item_text_item_totalprice">总价：<i>{{list.total_price}}</i></span></p>
+								</div>
+							</div>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</div>
-		<div class="outShop">
-			<div>
-				<span>商品数量</span>
-				<input type="text" placeholder="0" v-model="goodNum" />
-			</div>
-			<div>
-				<span>金额</span>
-				<input type="text" placeholder="￥0.00" v-model="outPrice" />
-			</div>
-		</div>
-		<div class="outP">
-			<span>抹零</span>
-        	<input type="text" placeholder="请输入抹零价格" v-model="zeroPrice" />
-		</div>
-        <ul class="withDlist inList outList">
-        	<li class="mui-table-view-cell mui-radio mui-right">
-        		<span>支付宝支付</span>
-        		<input name="radio" type="radio" value="alipay" v-model="payWay">
-        	</li>
-        	<li class="mui-table-view-cell mui-radio mui-right">
-        		<span>微信支付</span>
-        		<input name="radio" type="radio" value="wxpay" v-model="payWay">
-        	</li>
-        	<li class="mui-table-view-cell mui-radio mui-right">
-        		<span>现金支付</span>
-        		<input name="radio" type="radio" value="cash" v-model="payWay">
-        	</li>
-        	<li class="mui-table-view-cell mui-radio mui-right">
-        		<span>欠款</span>
-        		<input name="radio" type="radio" value="arrear" v-model="payWay">
-        	</li>
-        </ul>
-        <div class="outP outR">
-			<span>备注</span>
-        	<textarea placeholder="请输入备注" v-model="markCont"></textarea>
-		</div>
-		<!--<div class="payBot">-->
-			<!--<div class="div1">合计:<span>￥{{amount}}</span></div>-->
-			<div class="div2 boundBtn" @tap="cfmOutbound">出售</div>
+		<!--<div class="outTop">-->
+		<!--<span>{{selCont}}个月未出库</span>-->
+		<!--<select name="" v-model="selCont" @change="selType">-->
+		<!--<option value="1">1个月</option>-->
+		<!--<option value="2">2个月</option>-->
+		<!--<option value="3">3个月</option>-->
+		<!--<option value="4">4个月</option>-->
+		<!--<option value="5">5个月</option>-->
+		<!--<option value="6">6个月</option>-->
+		<!--<option value="7">7个月</option>-->
+		<!--<option value="8">8个月</option>-->
+		<!--<option value="9">9个月</option>-->
+		<!--<option value="10">10个月</option>-->
+		<!--<option value="11">11个月</option>-->
+		<!--<option value="12">12个月</option>-->
+		<!--</select>-->
+		<!--<img src="images/jiantou.png" class="arrowDown"/>-->
+		<!--</div>-->
+		<!--<div class="serCont_s">-->
+		<!--<div id="pullrefresh" class="mui-scroll-wrapper">-->
+		<!--<div class="mui-scroll">-->
+		<!--<ul class="goodsList clearfix">-->
+		<!--<li v-for="(unsoldList,index) in unsoldLists" @tap="editBound(index)">-->
+		<!--<img :src="unsoldList.goods_img" v-if="unsoldList.goods_img">-->
+		<!--<img src="images/logo.png" v-else>-->
+		<!--<div class='rcmDesc'>-->
+		<!--<p class="mui-ellipsis p1">{{unsoldList.goods_name}}</p>-->
+		<!--<p class="p2">型号/规格：{{unsoldList.spec}}/{{unsoldList.spec}}</p>-->
+		<!--<p class="p3">￥{{unsoldList.cost_price}}</p>-->
+		<!--</div>-->
+		<!--</li>-->
+		<!--</ul>-->
+		<!--</div>-->
+		<!--</div>-->
 		<!--</div>-->
 	</div>
-	</div>
+	<!--新出库记录-->
+	<!--<div class="mui-content">-->
+		<!--<div class="outTop" @tap="selUnit">-->
+			<!--<span>姓名</span>-->
+			<!--<input type="text" placeholder="点击选择客户" readonly v-model="userName" />-->
+			<!--<img src="images/jiantou.png" class="arrowDown"/>-->
+		<!--</div>-->
+		<!--<p class="outTit">选择商品</p>-->
+		<!--<div class="inBan outAdd" @tap="selGood">-->
+			<!--<img src="images/outAdd.png" alt="" v-if="!selGoods" />-->
+			<!--<div style="width: 100%;" v-else>-->
+			<!--<p>{{goodName}}</p>-->
+			<!--<p class="p1"><span>X{{selGoods.stock}}</span><span>￥{{selGoods.cost_price}}</span><span>￥{{selGoods.sale_amount}}</span></p>-->
+			<!--<img :src="selGoods.goods_img" alt="" />-->
+			<!--</div>-->
+		<!--</div>-->
+		<!--<div class="outShop">-->
+			<!--<div>-->
+				<!--<span>商品数量</span>-->
+				<!--<input type="text" placeholder="0" v-model="goodNum" />-->
+			<!--</div>-->
+			<!--<div>-->
+				<!--<span>金额</span>-->
+				<!--<input type="text" placeholder="￥0.00" v-model="outPrice" />-->
+			<!--</div>-->
+		<!--</div>-->
+		<!--<div class="outP">-->
+			<!--<span>抹零</span>-->
+        	<!--<input type="text" placeholder="请输入抹零价格" v-model="zeroPrice" />-->
+		<!--</div>-->
+        <!--<ul class="withDlist inList outList">-->
+        	<!--<li class="mui-table-view-cell mui-radio mui-right">-->
+        		<!--<span>支付宝支付</span>-->
+        		<!--<input name="radio" type="radio" value="alipay" v-model="payWay">-->
+        	<!--</li>-->
+        	<!--<li class="mui-table-view-cell mui-radio mui-right">-->
+        		<!--<span>微信支付</span>-->
+        		<!--<input name="radio" type="radio" value="wxpay" v-model="payWay">-->
+        	<!--</li>-->
+        	<!--<li class="mui-table-view-cell mui-radio mui-right">-->
+        		<!--<span>现金支付</span>-->
+        		<!--<input name="radio" type="radio" value="cash" v-model="payWay">-->
+        	<!--</li>-->
+        	<!--<li class="mui-table-view-cell mui-radio mui-right">-->
+        		<!--<span>欠款</span>-->
+        		<!--<input name="radio" type="radio" value="arrear" v-model="payWay">-->
+        	<!--</li>-->
+        <!--</ul>-->
+        <!--<div class="outP outR">-->
+			<!--<span>备注</span>-->
+        	<!--<textarea placeholder="请输入备注" v-model="markCont"></textarea>-->
+		<!--</div>-->
+		<!--&lt;!&ndash;<div class="payBot">&ndash;&gt;-->
+			<!--&lt;!&ndash;<div class="div1">合计:<span>￥{{amount}}</span></div>&ndash;&gt;-->
+			<!--<div class="div2 boundBtn" @tap="cfmOutbound">出售</div>-->
+		<!--&lt;!&ndash;</div>&ndash;&gt;-->
+	<!--</div>-->
+	<!--</div>-->
 	<script src="publick/js/jquery-3.1.0.min.js"></script>
 	<script src="publick/js/vue.min.js"></script>
     <script src="publick/js/mui.min.js"></script>
