--- a/views/pursellSave.html
+++ b/views/pursellSave.html
@@ -23,59 +23,88 @@
 		<header class="mui-bar header idxHeader">
 		    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 		    <h1 class="mui-title head-title">进销存</h1>
-		    <a class="mui-icon mui-pull-right headTxt">核销</a>
+		    <!--<a class="mui-icon mui-pull-right headTxt">核销</a>-->
 		</header>
 		<div class="mui-content" id="vmObj" v-cloak>
-			<div class="idxMenu">
-		        <ul class="mui-row mui-table-view pursellList clearfix">
-		            <li class="mui-table-view-cell mui-col-xs-4" @tap="inbound">
-	                   	<img src="images/pursell1.png">
-	                	<p>入库</p>
-		            </li>
-		            <li class="mui-table-view-cell mui-col-xs-4" @tap="outbound">
-	                   	<img src="images/pursell2.png">
-	                	<p>出库</p>
-		            </li>
-		            <li class="mui-table-view-cell mui-col-xs-4" @tap="inventory">
-	                   	<img src="images/pursell3.png">
-	                	<p>库存</p>
-		            </li>
-		            <li class="mui-table-view-cell mui-col-xs-4" @tap="hisRecd">
-	                   	<img src="images/pursell4.png">
-	                	<p>历史账单</p>
-		            </li>
-		            <li class="mui-table-view-cell mui-col-xs-4" @tap="userManage">
-	                   	<img src="images/pursell5.png">
-	                	<p>客户管理</p>
-		            </li>
-		            <li class="mui-table-view-cell mui-col-xs-4" @tap="unsold">
-	                   	<img src="images/pursell6.png">
-	                	<p>滞销</p>
-		            </li>
-		        </ul>
-		    </div>
-		    <div class="serCont_s">
-		    	<ul class="filteTab purTab">
-					<li class="active" @tap="dft">默认</li>
-					<li @tap="saleNum">销售量</li>
-					<li @tap="saleAmount">销售额</li>
+			<div>
+				<ul class="mui-table-view tabBox">
+					<li class="mui-table-view-cell mui-media" @tap="inbound">
+						<img src="images/pursell7.png">
+						<span class="tabText">入库</span>
+						<span class="mui-navigate-right myArrow"></span>
+					</li>
+					<li class="mui-table-view-cell mui-media" @tap="outbound">
+						<img src="images/pursell8.png">
+						<span class="tabText">出库记录</span>
+						<span class="mui-navigate-right myArrow"></span>
+					</li>
+					<li class="mui-table-view-cell mui-media" @tap="inventory">
+						<img src="images/pursell9.png">
+						<span class="tabText">库存</span>
+						<span class="mui-navigate-right myArrow"></span>
+					</li>
+					<li class="mui-table-view-cell mui-media" @tap="unsold">
+						<img src="images/pursell10.png">
+						<span class="tabText">滞销</span>
+						<span class="mui-navigate-right myArrow"></span>
+					</li>
+					<li class="mui-table-view-cell mui-media" @tap="goCheck">
+						<img src="images/pursell11.png">
+						<span class="tabText">核销</span>
+						<span class="mui-navigate-right myArrow"></span>
+					</li>
 				</ul>
-			    <div id="pullrefresh" class="mui-scroll-wrapper">
-					<div class="mui-scroll">
-						<ul class="goodsList clearfix">
-							<li class="clearfix" v-for="(goodsList,index) in pursellLists" @tap="editBound(index)">
-								<img :src="goodsList.goods_img" v-if="goodsList.goods_img">
-								<img src="images/logo.png" v-else>
-								<div class='rcmDesc'>
-									<p class="mui-ellipsis p1">{{goodsList.goods_name}}</p>
-									<p class="p2">型号/规格：{{goodsList.spec}}/{{goodsList.spec}}</p>
-									<p class="p3">￥{{goodsList.cost_price}}</p>
-								</div>
-							</li>
-						</ul>
-					</div>
-				</div>
-		    </div>
+			</div>
+			<!--<div class="idxMenu">-->
+		        <!--<ul class="mui-row mui-table-view pursellList clearfix">-->
+		            <!--<li class="mui-table-view-cell mui-col-xs-4" @tap="inbound">-->
+	                   	<!--<img src="images/pursell1.png">-->
+	                	<!--<p>入库</p>-->
+		            <!--</li>-->
+		            <!--<li class="mui-table-view-cell mui-col-xs-4" @tap="outbound">-->
+	                   	<!--<img src="images/pursell2.png">-->
+	                	<!--<p>出库</p>-->
+		            <!--</li>-->
+		            <!--<li class="mui-table-view-cell mui-col-xs-4" @tap="inventory">-->
+	                   	<!--<img src="images/pursell3.png">-->
+	                	<!--<p>库存</p>-->
+		            <!--</li>-->
+		            <!--<li class="mui-table-view-cell mui-col-xs-4" @tap="hisRecd">-->
+	                   	<!--<img src="images/pursell4.png">-->
+	                	<!--<p>历史账单</p>-->
+		            <!--</li>-->
+		            <!--<li class="mui-table-view-cell mui-col-xs-4" @tap="userManage">-->
+	                   	<!--<img src="images/pursell5.png">-->
+	                	<!--<p>客户管理</p>-->
+		            <!--</li>-->
+		            <!--<li class="mui-table-view-cell mui-col-xs-4" @tap="unsold">-->
+	                   	<!--<img src="images/pursell6.png">-->
+	                	<!--<p>滞销</p>-->
+		            <!--</li>-->
+		        <!--</ul>-->
+		    <!--</div>-->
+		    <!--<div class="serCont_s">-->
+		    	<!--<ul class="filteTab purTab">-->
+					<!--<li class="active" @tap="dft">默认</li>-->
+					<!--<li @tap="saleNum">销售量</li>-->
+					<!--<li @tap="saleAmount">销售额</li>-->
+				<!--</ul>-->
+			    <!--<div id="pullrefresh" class="mui-scroll-wrapper">-->
+					<!--<div class="mui-scroll">-->
+						<!--<ul class="goodsList clearfix">-->
+							<!--<li class="clearfix" v-for="(goodsList,index) in pursellLists" @tap="editBound(index)">-->
+								<!--<img :src="goodsList.goods_img" v-if="goodsList.goods_img">-->
+								<!--<img src="images/logo.png" v-else>-->
+								<!--<div class='rcmDesc'>-->
+									<!--<p class="mui-ellipsis p1">{{goodsList.goods_name}}</p>-->
+									<!--<p class="p2">型号/规格：{{goodsList.spec}}/{{goodsList.spec}}</p>-->
+									<!--<p class="p3">￥{{goodsList.cost_price}}</p>-->
+								<!--</div>-->
+							<!--</li>-->
+						<!--</ul>-->
+					<!--</div>-->
+				<!--</div>-->
+		    <!--</div>-->
 		</div>
 		<script src="publick/js/jquery-3.1.0.min.js"></script>
 		<script src="publick/js/vue.min.js"></script>
