--- a/views/shopList.html
+++ b/views/shopList.html
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 		<header class="mui-bar header idxHeader">
-		    <a class="mui-icon mui-icon-left-nav mui-pull-left back"></a>
+		    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 		    <h1 class="mui-title head-title">汽修厂</h1>
 		</header>
 		<div class="mui-content" id="vmObj" v-cloak>
