fix(unsold.js): 进销存修改需求
进销存修改

--- a/views/inbound.html
+++ b/views/inbound.html
@@ -36,7 +36,7 @@
 							<div class="inOutSaved_item_text">
 								<p class="inOutSaved_item_text_head">{{list.goods_name}}</p>
 								<p class="inOutSaved_item_text_item">型号/规格：{{list.spec_name1}}/{{list.spec_name2}}</p>
-								<p class="inOutSaved_item_text_item"><span class="inOutSaved_item_text_item_in">库存：{{list.stock}} </span><span class="inOutSaved_item_text_item_unitprice">单价：{{list.price}}</span></p>
+								<p class="inOutSaved_item_text_item"><span class="inOutSaved_item_text_item_in">数量：{{list.stock}} </span><span class="inOutSaved_item_text_item_unitprice">单价：{{list.price}}</span></p>
 							</div>
 						</div>
 						<p class="inOutSaved_bottomText">
