--- a/views/outBound.html
+++ b/views/outBound.html
@@ -42,7 +42,7 @@
 								<div class="inOutSaved_item_text">
 									<p class="inOutSaved_item_text_head">{{list.goods_name}}</p>
 									<p class="inOutSaved_item_text_item">型号/规格：{{list.spec_name1}}/{{list.spec_name2}}</p>
-									<p class="inOutSaved_item_text_item"><span class="inOutSaved_item_text_item_in">库存：{{list.stock}} </span><span class="inOutSaved_item_text_item_unitprice">单价：{{list.price}}</span><span class="inOutSaved_item_text_item_totalprice">总价：<i>{{list.total_price}}</i></span></p>
+									<p class="inOutSaved_item_text_item"><span class="inOutSaved_item_text_item_in">数量：{{list.num}} </span><span class="inOutSaved_item_text_item_unitprice">销售价：{{list.money}}</span><span class="inOutSaved_item_text_item_totalprice">总价：<i>{{list.total_money}}</i></span></p>
 								</div>
 							</div>
 						</li>
