--- a/views/unsold.html
+++ b/views/unsold.html
@@ -29,14 +29,14 @@
 					<div class="mui-scroll">
 						<ul class="inOutSaved">
 							<li v-for="(list,index) in dataLists">
-								<p class="inOutSaved_headText">已滞销：30天</p>
+								<p class="inOutSaved_headText">已滞销：{{list.unsalable_day}}天</p>
 								<div class="inOutSaved_item">
 									<img :src="list.goods_img" v-if="list.goods_img">
 									<img src="images/logo.png" v-else>
 									<div class="inOutSaved_item_text">
 										<p class="inOutSaved_item_text_head">{{list.goods_name}}</p>
 										<p class="inOutSaved_item_text_item">型号/规格：{{list.spec_name1}}/{{list.spec_name2}}</p>
-										<p class="inOutSaved_item_text_item"><span class="inOutSaved_item_text_item_in">库存：{{list.stock}} </span><span class="inOutSaved_item_text_item_unitprice">单价：{{list.price}}</span></p>
+										<p class="inOutSaved_item_text_item"><span class="inOutSaved_item_text_item_in">数量：{{list.stock}} </span><span class="inOutSaved_item_text_item_unitprice">进价：{{list.price}}</span><span class="inOutSaved_item_text_item_totalprice">总价：<i>{{list.total_price}}</i></span></p>
 									</div>
 								</div>
 							</li>
